@@ -4,6 +4,12 @@
 
   * Provide Repository.get_known_graph_ancestry(). (Jelmer Vernooij)
 
+  * Provide Repository.get_file_graph(). (Jelmer Vernooij, #677363)
+
+  * Provide GitRevisionTree.get_file_mtime(). (Jelmer Vernooij)
+
+  * Provide GitRevisionTree.get_file_revision(). (Jelmer Vernooij, #780953)
+
 0.6.1	2011-06-18
 
  BUG FIXES
